Update the introduction section with history of Canada cricket team.

--- a/cricket.html
+++ b/cricket.html
@@ -15,8 +15,7 @@
         <section>
             <h2>Introduction</h2>
             <p>
-                Insert text about the history of men's cricket team.
-            </p>
+                The Canada cricket team has a rich history, dating back to the 19th century. Cricket in Canada began to gain popularity in the early 1800s, and the first recorded match was played in 1834. The Canadian team played its first international match against the United States in 1844, which is considered one of the oldest international sporting events. Canada has participated in several ICC tournaments, including the ICC Trophy (now known as the ICC World Cup Qualifier) and the ICC World Cup. They made their World Cup debut in 1979 and have participated in several editions since then. One of their notable performances was in the 2003 World Cup, where they achieved their first World Cup victory by defeating Bangladesh. The team has seen ups and downs over the years but continues to be a significant part of the cricketing world, especially in the Americas region. They are governed by Cricket Canada, which is responsible for promoting and developing the sport throughout the country.</p>
         </section>
 
         <!--This section contains all the current players on the Candian cricket men's team-->
