Set up the current players list of Canada.

--- a/cricket.html
+++ b/cricket.html
@@ -22,9 +22,20 @@
         <section>
             <h2>Current Players</h2>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Jeremy Gordon</li>
+                    <li>Dillon Heyliger</li>
+                    <li>Pargat Singh</li>
+                    <li>Aaron Johnson</li>
+                    <li>Ravinderpal Singh</li>
+                    <li>Saad Bin Jafar</li>
+                    <li>Nicholas Kirton</li>
+                    <li>Shreyas Movva</li>
+                    <li>Kaleem Sana</li>
+                    <li>Junaid Siddiqui</li>
+                    <li>Nikhil Dutta</li>
+                    <li>Harsh Thaker</li>
+                    <li>Srimantha Wijeratne</li>
+                    <li>Dilpreet Bajwa</li>
                 </ul>
         </section>
 
