Update the current player section with group image of cricket team.

--- a/cricket.html
+++ b/cricket.html
@@ -21,6 +21,7 @@
         <!--This section contains all the current players on the Candian cricket men's team-->
         <section>
             <h2>Current Players</h2>
+            <img src="https://emergingcricket.com/my_content/uploads/2023/05/Canada-beat-PNG-by-90-runs.jpeg" width="250px" height="200px" alt="Cricket team" class="profile-img">
                 <ul>
                     <li>Jeremy Gordon</li>
                     <li>Dillon Heyliger</li>
