--- a/cricket.html
+++ b/cricket.html
@@ -29,6 +29,11 @@
                 </ul>
         </section>
 
+        <section>
+            <h2>Team Sponsorships</h2>
+             
+            <p>In 2023, Canada Cricket formed a strategic partnership with Boundaries North to lead initiatives to build the sport’s presence in Canada and harvest its commercial potential. Boundaries North signed up TD Bank, Nissan, Coca-Cola and A&W Burgers to be the current sponsors of the Canada National Team.</p>
+        </section>
 
     </main>
     
