--- a/cricket.html
+++ b/cricket.html
@@ -21,7 +21,7 @@
         <!--This section contains all the current players on the Candian cricket men's team-->
         <section>
             <h2>Current Players</h2>
-            <img src="https://emergingcricket.com/my_content/uploads/2023/05/Canada-beat-PNG-by-90-runs.jpeg" width="250px" height="200px" alt="Cricket team" class="profile-img">
+            <img src="https://emergingcricket.com/my_content/uploads/2023/05/Canada-beat-PNG-by-90-runs.jpeg" width="250px" height="200px" alt="Cricket team standing in huddle" class="profile-img">
                 <ul>
                     <li>Jeremy Gordon</li>
                     <li>Dillon Heyliger</li>
@@ -40,6 +40,7 @@
                 </ul>
         </section>
 
+        <!-- This section shows the team's sponsorships-->
         <section>
             <h2>Team Sponsorships</h2>
              
@@ -47,8 +48,17 @@
         </section>
 
     </main>
+
+    <!-- This section contains links to various websites about the team-->
+    <section>
+        <h1>Learn More About the Team</h1>
+        <a href="https://www.cricketcanada.org/team-squad/mens-national-team">Offical Website</a>
+        <a href="https://www.espncricinfo.com/team/canada-17">Match Schedule</a>
+    </section>
     
 </body>
+
+<!-- copyright section-->
 <footer>
     <p><i>All Rights Reserved</i></p>
 </footer>
